// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card demo -- card 1`] = `
.c2 {
  padding: 0 16px;
  margin-top: 12px;
}

.c2:before,
.c2:after {
  content: ' ';
  display: table;
}

.c2:after {
  clear: both;
}

.c3 {
  line-height: 28px;
  font-weight: bold;
}

.c5 {
  line-height: 22px;
  font-weight: normal;
}

.c6 {
  line-height: 28px;
  padding: 0 16px;
  margin-top: 12px;
}

.c6:before,
.c6:after {
  content: ' ';
  display: table;
}

.c6:after {
  clear: both;
}

.c8 {
  min-height: 30px;
  padding: 0 16px;
  margin-top: 12px;
}

.c10 {
  line-height: 1;
  padding: 0 16px;
  margin-top: 12px;
  padding-top: 12px;
}

.c10:before,
.c10:after {
  content: ' ';
  display: table;
}

.c10:after {
  clear: both;
}

.c0 {
  box-sizing: border-box;
  border-radius: 4px;
  text-align: left;
  padding-bottom: 12px;
  border: 1px solid #e1e6f0;
  background: #fff;
  font-size: 12px;
  color: #6b798e;
}

.c0 .c1 {
  color: #0a1633;
  font-size: 14px;
}

.c0 .c4 {
  color: #c3cad9;
  font-size: 12px;
}

.c0 .c9 {
  border-top: 1px solid #e1e6f0;
}

.c7 {
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  padding: 0 8px;
  color: #6b798e;
  background: #fff;
  border-color: #c3cad9;
}

.c7:hover {
  color: #4074e1;
  background: #fff;
  border-color: #4683e6;
}

<div
  class="uc-fe-card c0"
>
  <div
    class="c1 uc-fe-card-header c2"
  >
    <div
      class="uc-fe-card-title c3"
    >
      This is the title
    </div>
    <div
      class="c4 uc-fe-card-comment c5"
    >
      This is the comment
    </div>
  </div>
  <div
    class="uc-fe-card-action c6"
  >
    <button
      class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border c7"
      type="button"
    >
      This is a action button
    </button>
    <button
      class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border c7"
      type="button"
    >
      This is a action button
    </button>
  </div>
  <div
    class="uc-fe-card-content c8"
  >
    <div
      style="background:#e1e6f0;height:50px;padding:10px;"
    >
      This is the content
    </div>
  </div>
  <div
    class="c9 uc-fe-card-footer c10"
  >
    <button
      class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border c7"
      style="float:right;"
      type="button"
    >
      This is a footer button
    </button>
  </div>
</div>
`;

exports[`Card demo -- custom 1`] = `
.c5 {
  padding: 0 16px;
  margin-top: 12px;
}

.c5:before,
.c5:after {
  content: ' ';
  display: table;
}

.c5:after {
  clear: both;
}

.c6 {
  line-height: 28px;
  font-weight: bold;
}

.c8 {
  line-height: 22px;
  font-weight: normal;
}

.c2 {
  line-height: 28px;
  padding: 0 16px;
  margin-top: 12px;
}

.c2:before,
.c2:after {
  content: ' ';
  display: table;
}

.c2:after {
  clear: both;
}

.c1 {
  min-height: 30px;
  padding: 0 16px;
  margin-top: 12px;
}

.c10 {
  line-height: 1;
  padding: 0 16px;
  margin-top: 12px;
  padding-top: 12px;
}

.c10:before,
.c10:after {
  content: ' ';
  display: table;
}

.c10:after {
  clear: both;
}

.c0 {
  box-sizing: border-box;
  border-radius: 4px;
  text-align: left;
  padding-bottom: 12px;
  border: 1px solid #e1e6f0;
  background: #fff;
  font-size: 12px;
  color: #6b798e;
}

.c0 .c4 {
  color: #0a1633;
  font-size: 14px;
}

.c0 .c7 {
  color: #c3cad9;
  font-size: 12px;
}

.c0 .c9 {
  border-top: 1px solid #e1e6f0;
}

.c3 {
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  padding: 0 8px;
  color: #6b798e;
  background: #fff;
  border-color: #c3cad9;
}

.c3:hover {
  color: #4074e1;
  background: #fff;
  border-color: #4683e6;
}

<div
  class="uc-fe-card c0"
>
  <div
    class="uc-fe-card-content c1"
  >
    <div
      style="background:#e1e6f0;height:50px;padding:10px;"
    >
      This is the content
    </div>
  </div>
  <div
    class="uc-fe-card-action c2"
  >
    <button
      class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border c3"
      type="button"
    >
      This is a action button
    </button>
    <button
      class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border c3"
      type="button"
    >
      This is a action button
    </button>
  </div>
  <div
    class="c4 uc-fe-card-header c5"
  >
    <div
      class="uc-fe-card-title c6"
    >
      This is the title
    </div>
    <div
      class="c7 uc-fe-card-comment c8"
    >
      This is the comment
    </div>
  </div>
  <div
    class="c9 uc-fe-card-footer c10"
  >
    <button
      class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border c3"
      style="float:right;"
      type="button"
    >
      This is a footer button
    </button>
  </div>
</div>
`;
